basic chart working

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>HW Data</title>
+  <title>Music Appreication Data</title>
   <script src="https://code.jquery.com/jquery-2.1.3.min.js"></script>
   <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.3.12/angular.min.js"></script>
 
@@ -10,6 +10,8 @@
   <script src="./public/js/directives/angular-charts.min.js"></script>
 
   <script src="./public/js/controllers/students.controller.js"></script>
+
+  <link rel="stylesheet" href="./public/css/styles.css">
 
 </head>
 <body ng-app='studentsApp'>
